fixing text overflow

--- a/app/assets/stylesheets/components/_event_card.scss
+++ b/app/assets/stylesheets/components/_event_card.scss
@@ -33,6 +33,8 @@
   position: relative;
   margin-left: 5px;
   margin-right: 5px;
+  word-break: break-word;
+  inline-size: 100px;
 }
 
 .participation-info {
@@ -64,4 +66,11 @@
   width: 30px;
   padding-bottom: 3px;
   margin-right: 5px;
+}
+
+.description {
+  overflow: hidden;
+  overflow: auto;
+  max-height: 150px;
+
 }
